[package]
name = "qubic-miner-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
reqwest = {version = "0.12.2" , features = ["json", "stream"] }
tokio = {version = "1.37.0", features = ["full"]}
scraper = "0.19.0"
regex = "1.10.4"
duct = "0.13.7"
